<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15sp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner_image"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5.9"
        android:padding="15sp"
        android:background="#3fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/allura"
            android:text="@string/friends_corner"
            android:textColor="@color/primary_color_app"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:text="@string/sign_in"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:autofillHints="Email"
            android:fontFamily="@font/calligraffitti"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12sp"
            android:textColorHint="@color/secondary_color_app"
            android:textColor="@color/secondary_color_app"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:paddingLeft="12sp"
            android:drawableStart="@drawable/ic_email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:ems="10"
            android:fontFamily="@font/calligraffitti"
            android:textColorHint="@color/secondary_color_app"
            android:textColor="@color/secondary_color_app"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:drawablePadding="12sp"
            android:autofillHints="Password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock" />

        <CheckBox
            android:id="@+id/check_reg"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="0.6"
            android:checked="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/show_password"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8">
            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:text="@string/forget_password"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <Button
            android:layout_margin="10sp"
            android:id="@+id/btn_log"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:background="@drawable/custom_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/login_now"/>

        <Button
            android:id="@+id/btn_go_to_reg"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.6"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:text="@string/reg_desp"/>

    </LinearLayout>

</LinearLayout>