<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15sp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner_image"
    tools:context=".ForgetActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4.4"
        android:padding="15sp"
        android:background="#3fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:fontFamily="@font/allura"
            android:gravity="center"
            android:text="@string/friends_corner"
            android:textColor="@color/primary_color_app"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:text="@string/forget_pass"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/for_email"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:autofillHints="Email"
            android:fontFamily="@font/calligraffitti"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12sp"
            android:textColorHint="@color/secondary_color_app"
            android:textColor="@color/secondary_color_app"
            android:ems="10"
            android:textStyle="bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:paddingLeft="12sp"
            android:drawableStart="@drawable/ic_email" />


        <Button
            android:layout_margin="10sp"
            android:id="@+id/btn_forget"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.4"
            android:textColor="@color/black"
            android:background="@drawable/custom_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/send_mail"/>

        <Button
            android:id="@+id/btn_for_to_reg"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.6"
            android:background="@android:color/transparent"
            android:text="@string/reg_desp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_for_to_log"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="10sp"
            android:layout_weight="0.6"
            android:background="@android:color/transparent"
            android:text="@string/log_desp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>