<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15sp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner_image"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5.8"
        android:padding="15sp"
        android:background="#3fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:fontFamily="@font/allura"
            android:gravity="center"
            android:text="@string/friends_corner"
            android:textColor="@color/primary_color_app"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.7"
            android:autofillHints="Email"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12sp"
            android:ems="10"
            android:fontFamily="@font/calligraffitti"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12sp"
            android:paddingLeft="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/secondary_color_app"
            android:textColorHint="@color/secondary_color_app"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.7"
            android:autofillHints="Password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12sp"
            android:ems="10"
            android:fontFamily="@font/calligraffitti"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/secondary_color_app"
            android:textColorHint="@color/secondary_color_app"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/check_reg"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="0.6"
            android:checked="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/show_password"/>

        <EditText
            android:id="@+id/cp_password"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.7"
            android:autofillHints="Password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12sp"
            android:ems="10"
            android:fontFamily="@font/calligraffitti"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/secondary_color_app"
            android:textColorHint="@color/secondary_color_app"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_margin="10sp"
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:background="@drawable/custom_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/create_account"/>

        <Button
            android:id="@+id/btn_go_to_log"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="10sp"
            android:layout_weight="0.6"
            android:background="@android:color/transparent"
            android:text="@string/log_desp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>